[Mac] Restore menu position for buttons after Material Design changes.

Changing the button active area from 28x28 to 24x24 caused button menus
to be slightly mispositioned. This change restores their position to
normal.

R=avi@chromium.org
BUG=602672

Review URL: https://codereview.chromium.org/1886903002

Cr-Commit-Position: refs/heads/master@{#387160}

Former-commit-id: 5d2416adbf662a8c646ba7aa2f47e0fc0de600a4